--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "keen-slider": "^5.5.1",
-    "next": "10.1.3",
+    "next": "^11.1.2",
+    "next-images": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
